Continuing to simplify and reduce. Tests now pass.